--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-native": "0.76.6",
     "react-native-gesture-handler": "^2.23.0",
     "react-native-maps": "1.10.0",
+    "react-native-maps-directions": "^1.9.0",
     "react-native-reanimated": "^3.16.7",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "^4.4.0",
